bin_PROGRAMS = libobjs CurrencyAmountTest dates
 
libobjs_SOURCES = libobjs.cc Person.cc Person.hh Address.cc Address.hh PhoneNumber.cc PhoneNumber.hh SSN.hh SSN.cc Dt.hh Dt.cc

CurrencyAmountTest_SOURCES = CurrencyAmountTest.cc CurrencyAmount.hh CurrencyAmount.cc

dates_SOURCES = dates.cc Dt.hh Dt.cc
 
SUBDIRS = 
 
libobjs_LDADD = 
