bin_PROGRAMS = libobjs CurrencyAmountTest dates tstEmailAddress
 
libobjs_SOURCES = libobjs.cc Person.cc Person.hh Address.cc Address.hh PhoneNumber.cc PhoneNumber.hh SSN.hh SSN.cc Dt.hh Dt.cc EmailAddress.hh EmailAddress.cc

CurrencyAmountTest_SOURCES = CurrencyAmountTest.cc CurrencyAmount.hh CurrencyAmount.cc

dates_SOURCES = dates.cc Dt.hh Dt.cc

tstEmailAddress_SOURCES = tstEmailAddress.cc EmailAddress.hh EmailAddress.cc

SUBDIRS = 
 
libobjs_LDADD = 
